--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    box-shadow: .1vmin .1vmin 10vmin;
 }
 
 .field{
@@ -29,16 +30,21 @@
     height: 70vh;
     position: fixed;
     top:15vh;
-    left:10vw;  
+    left:10vw; 
+    overflow: hidden;
+    background-color: #999;
+    
 }
 .bot{
     position: absolute;
     width: 5vw;
     height: 5vw;
-    background-image:url("/assets/images/smile.png");
+    background-image:url("/assets/images/smile-7.png");
     background-size: 5vw;
-    transition: 100ms;
+    transition: 300ms;
     transition-delay: 3ms;
+    cursor: pointer;
+    
 }
 
 .reset{
